<resources>
    <string name="app_name">GithubRepoViewer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name: </string>
    <string name="github_repo_viewer">GithubRepoViewer</string>
    <string name="mohamed_adel">Mohamed Adel</string>
    <string name="description">Description: </string>
    <string name="grit_is_no_longer_maintained_check_out_libgit2_rugged_grit_gives_you_object_oriented_read_write_access_to_git_repositories_via_ruby">**Grit is no longer maintained. Check out libgit2/rugged.** Grit gives you object oriented read/write access to Git repositories via Ruby.</string>
    <string name="stars_count">Stars Count: </string>
    <string name="owner">Owner: </string>
    <string name="show_star_count"><u>Show Star Count</u></string>
    <string name="_651">651</string>
    <string name="repositories">Repositories</string>
    <string name="language">Language: </string>
    <string name="repo_watchers">Repo Watchers: </string>
    <string name="fork_count">Fork Count: </string>
    <string name="open_issues">Open Issues: </string>
    <string name="issues">Issues</string>
    <string name="author">Author: </string>
    <string name="creation_date">Creation Date: </string>
    <string name="update_date">Update Date: </string>
    <string name="closed_date">Closed Date: </string>
    <string name="state">State: </string>
    <string name="search_button">Search Button</string>
    <string name="search_for_repository">Search For Repository</string>
    <string name="search">Search</string>
    <string name="back_button">backButton</string>
</resources>