<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="repoModel"
            type="com.example.githubrepoviewer.repos.presentation.models.RepoUiModel" />

        <variable
            name="reposViewModel"
            type="com.example.githubrepoviewer.repos.presentation.ReposViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5ssp"
        app:cardCornerRadius="@dimen/_5ssp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8ssp">

            <TextView
                android:id="@+id/repoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/repoNameValue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/repoNameValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5ssp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{repoModel.repoName}"
                android:textAlignment="textStart"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@id/repoName"
                app:layout_constraintEnd_toStartOf="@id/ownerName"
                app:layout_constraintStart_toEndOf="@id/repoName"
                app:layout_constraintTop_toTopOf="@id/repoName"
                tools:ignore="RtlSymmetry"
                tools:text="@string/github_repo_viewer" />

            <TextView
                android:id="@+id/ownerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5ssp"
                android:text="@string/owner"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/repoName"
                app:layout_constraintEnd_toStartOf="@id/ownerNameValue"
                app:layout_constraintStart_toEndOf="@id/repoNameValue"
                app:layout_constraintTop_toTopOf="@id/repoName" />

            <TextView
                android:id="@+id/ownerNameValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{repoModel.repoOwner}"
                android:textAlignment="textStart"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@id/repoName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ownerName"
                app:layout_constraintTop_toTopOf="@id/repoName"
                tools:ignore="RtlSymmetry"
                tools:text="@string/mohamed_adel" />

            <TextView
                android:id="@+id/repoDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5ssp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/repoName"
                app:layout_constraintTop_toBottomOf="@id/repoName" />

            <TextView
                android:id="@+id/descriptionValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{repoModel.description}"
                android:textAlignment="textStart"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@id/repoDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/repoDescription"
                app:layout_constraintTop_toTopOf="@id/repoDescription"
                tools:ignore="RtlSymmetry"
                tools:text="@string/grit_is_no_longer_maintained_check_out_libgit2_rugged_grit_gives_you_object_oriented_read_write_access_to_git_repositories_via_ruby" />

            <TextView
                android:id="@+id/starsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5ssp"
                android:text="@string/stars_count"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@id/starsCountValue"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@id/repoName"
                app:layout_constraintTop_toBottomOf="@id/repoDescription"
                app:visibleIf="@{repoModel.starCount}" />

            <TextView
                android:id="@+id/starsCountValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFC107"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:visibility="gone"
                app:count="@{repoModel.starCount}"
                app:layout_constraintBottom_toBottomOf="@id/starsCount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/starsCount"
                app:layout_constraintTop_toTopOf="@id/starsCount"
                tools:text="@string/_651" />

            <TextView
                android:id="@+id/showStarsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5ssp"
                android:textStyle="bold"
                android:text="@string/show_star_count"
                android:textColor="#008EFF"
                android:textSize="@dimen/_12ssp"
                app:hideIf="@{repoModel.starCount}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/repoDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>